--- a/final_project/Alpha/imdb_tools_test.ipynb
+++ b/final_project/Alpha/imdb_tools_test.ipynb
@@ -264,33 +264,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tt_idnum_plus(tsv_df, start_year = 2010, end_yead = 2019, list_col = ['tconst']):\n",
-    "    df_ = tsv_df[(tsv_df['startYear'].apply(lambda x: int(x) if x != '\\\\N' else 0) >= start_year) & (tsv_df['startYear'].apply(lambda x: int(x) if x != '\\\\N' else 0) <= end_yead) & (tsv_df['titleType'] == 'movie')][list_col]\n",
+    "def tt_idnum_plus(tsv_df, start_year = 2000, end_year = 2019, list_col = ['tconst']):\n",
+    "    df_ = tsv_df[(tsv_df['startYear'].apply(lambda x: int(x) if x != '\\\\N' else 0) >= start_year) & (tsv_df['startYear'].apply(lambda x: int(x) if x != '\\\\N' else 0) <= end_year) & (tsv_df['titleType'] == 'movie')] #[list_col]\n",
     "    return df_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_idnum = tt_idnum_plus(list_df[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_idnum.reset_index(drop = True, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_merge = pd.merge(left=df_idnum, right=list_df[1], left_on='tconst', right_on='tconst')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_columns_change = ['genres', 'directors', 'writers']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_col_content(df, columns):\n",
+    "    for i in columns:\n",
+    "        df[i] = df[i].apply(lambda x: x.split(','))\n",
+    "        df[i] = pd.DataFrame(first_merge[i].values.tolist(), index= df.index)[0] # gets first value in list\n",
+    "        if i != 'genres':\n",
+    "            df[i] = df[i].map(list_df[4].set_index('nconst')['primaryName']) # replaces ids with actual names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_col_content(first_merge, list_columns_change)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prep_df(df):\n",
+    "    df = df[df['isAdult'] == 0]\n",
+    "    df = df.drop(columns = ['tconst', 'titleType', 'originalTitle', 'isAdult', 'startYear', 'endYear'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prep_df(first_merge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "            tconst\n16664    tt0016906\n63063    tt0064322\n67690    tt0069049\n67836    tt0069204\n98084    tt0100275\n...            ...\n6724248  tt9916538\n6724289  tt9916622\n6724328  tt9916706\n6724339  tt9916730\n6724350  tt9916754\n\n[156088 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tconst</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>16664</th>\n      <td>tt0016906</td>\n    </tr>\n    <tr>\n      <th>63063</th>\n      <td>tt0064322</td>\n    </tr>\n    <tr>\n      <th>67690</th>\n      <td>tt0069049</td>\n    </tr>\n    <tr>\n      <th>67836</th>\n      <td>tt0069204</td>\n    </tr>\n    <tr>\n      <th>98084</th>\n      <td>tt0100275</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>6724248</th>\n      <td>tt9916538</td>\n    </tr>\n    <tr>\n      <th>6724289</th>\n      <td>tt9916622</td>\n    </tr>\n    <tr>\n      <th>6724328</th>\n      <td>tt9916706</td>\n    </tr>\n    <tr>\n      <th>6724339</th>\n      <td>tt9916730</td>\n    </tr>\n    <tr>\n      <th>6724350</th>\n      <td>tt9916754</td>\n    </tr>\n  </tbody>\n</table>\n<p>156088 rows × 1 columns</p>\n</div>"
+      "text/plain": "                                             primaryTitle runtimeMinutes  \\\n0                                              Frivolinas             80   \n1                                          Kate & Leopold            118   \n2                                The Woman with the Knife             80   \n3                              The Other Side of the Wind            122   \n4                                         Sabse Bada Sukh             \\N   \n...                                                   ...            ...   \n227492        Rodolpho Teóphilo - O Legado de um Pioneiro             57   \n227493  De la ilusión al desconcierto: cine colombiano...            100   \n227494                                    Dankyavar Danka             \\N   \n227495                                             6 Gunn            116   \n227496                     Chico Albuquerque - Revelações             49   \n\n             genres              directors                 writers  \n0            Comedy        Arturo Carballo                     NaN  \n1            Comedy          James Mangold           Steven Rogers  \n2             Drama         Bassori Timite          Bassori Timite  \n3             Drama           Orson Welles            Orson Welles  \n4            Comedy   Hrishikesh Mukherjee                  Gulzar  \n...             ...                    ...                     ...  \n227492  Documentary  Ana Célia de Oliveira           Angela Gurgel  \n227493  Documentary            Luis Ospina             Luis Ospina  \n227494       Comedy          Kanchan Nayak            Sudhir Nikam  \n227495           \\N           Kiran Gawade            Kiran Gawade  \n227496  Documentary          Angela Gurgel  Vinicius Augusto Bozzo  \n\n[227497 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>primaryTitle</th>\n      <th>runtimeMinutes</th>\n      <th>genres</th>\n      <th>directors</th>\n      <th>writers</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Frivolinas</td>\n      <td>80</td>\n      <td>Comedy</td>\n      <td>Arturo Carballo</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Kate &amp; Leopold</td>\n      <td>118</td>\n      <td>Comedy</td>\n      <td>James Mangold</td>\n      <td>Steven Rogers</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>The Woman with the Knife</td>\n      <td>80</td>\n      <td>Drama</td>\n      <td>Bassori Timite</td>\n      <td>Bassori Timite</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>The Other Side of the Wind</td>\n      <td>122</td>\n      <td>Drama</td>\n      <td>Orson Welles</td>\n      <td>Orson Welles</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Sabse Bada Sukh</td>\n      <td>\\N</td>\n      <td>Comedy</td>\n      <td>Hrishikesh Mukherjee</td>\n      <td>Gulzar</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>227492</th>\n      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n      <td>57</td>\n      <td>Documentary</td>\n      <td>Ana Célia de Oliveira</td>\n      <td>Angela Gurgel</td>\n    </tr>\n    <tr>\n      <th>227493</th>\n      <td>De la ilusión al desconcierto: cine colombiano...</td>\n      <td>100</td>\n      <td>Documentary</td>\n      <td>Luis Ospina</td>\n      <td>Luis Ospina</td>\n    </tr>\n    <tr>\n      <th>227494</th>\n      <td>Dankyavar Danka</td>\n      <td>\\N</td>\n      <td>Comedy</td>\n      <td>Kanchan Nayak</td>\n      <td>Sudhir Nikam</td>\n    </tr>\n    <tr>\n      <th>227495</th>\n      <td>6 Gunn</td>\n      <td>116</td>\n      <td>\\N</td>\n      <td>Kiran Gawade</td>\n      <td>Kiran Gawade</td>\n    </tr>\n    <tr>\n      <th>227496</th>\n      <td>Chico Albuquerque - Revelações</td>\n      <td>49</td>\n      <td>Documentary</td>\n      <td>Angela Gurgel</td>\n      <td>Vinicius Augusto Bozzo</td>\n    </tr>\n  </tbody>\n</table>\n<p>227497 rows × 5 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 90
     }
    ],
    "source": [
-    "df_idnum = tt_idnum_plus(list_df[0])\n",
-    "df_idnum."
+    "first_merge.drop(columns = ['tconst', 'titleType', 'originalTitle', 'isAdult', 'startYear', 'endYear'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "           tconst titleType  \\\n0       tt0016906     movie   \n1       tt0035423     movie   \n2       tt0064322     movie   \n3       tt0069049     movie   \n4       tt0069204     movie   \n...           ...       ...   \n227492  tt9916622     movie   \n227493  tt9916680     movie   \n227494  tt9916706     movie   \n227495  tt9916730     movie   \n227496  tt9916754     movie   \n\n                                             primaryTitle  \\\n0                                              Frivolinas   \n1                                          Kate & Leopold   \n2                                The Woman with the Knife   \n3                              The Other Side of the Wind   \n4                                         Sabse Bada Sukh   \n...                                                   ...   \n227492        Rodolpho Teóphilo - O Legado de um Pioneiro   \n227493  De la ilusión al desconcierto: cine colombiano...   \n227494                                    Dankyavar Danka   \n227495                                             6 Gunn   \n227496                     Chico Albuquerque - Revelações   \n\n                                            originalTitle  isAdult startYear  \\\n0                                              Frivolinas        0      2014   \n1                                          Kate & Leopold        0      2001   \n2                                     La femme au couteau        0      2010   \n3                              The Other Side of the Wind        0      2018   \n4                                         Sabse Bada Sukh        0      2018   \n...                                                   ...      ...       ...   \n227492        Rodolpho Teóphilo - O Legado de um Pioneiro        0      2015   \n227493  De la ilusión al desconcierto: cine colombiano...        0      2007   \n227494                                    Dankyavar Danka        0      2013   \n227495                                             6 Gunn        0      2017   \n227496                     Chico Albuquerque - Revelações        0      2013   \n\n       endYear runtimeMinutes       genres              directors  \\\n0           \\N             80       Comedy        Arturo Carballo   \n1           \\N            118       Comedy          James Mangold   \n2           \\N             80        Drama         Bassori Timite   \n3           \\N            122        Drama           Orson Welles   \n4           \\N             \\N       Comedy   Hrishikesh Mukherjee   \n...        ...            ...          ...                    ...   \n227492      \\N             57  Documentary  Ana Célia de Oliveira   \n227493      \\N            100  Documentary            Luis Ospina   \n227494      \\N             \\N       Comedy          Kanchan Nayak   \n227495      \\N            116           \\N           Kiran Gawade   \n227496      \\N             49  Documentary          Angela Gurgel   \n\n                       writers  \n0                          NaN  \n1                Steven Rogers  \n2               Bassori Timite  \n3                 Orson Welles  \n4                       Gulzar  \n...                        ...  \n227492           Angela Gurgel  \n227493             Luis Ospina  \n227494            Sudhir Nikam  \n227495            Kiran Gawade  \n227496  Vinicius Augusto Bozzo  \n\n[227497 rows x 11 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tconst</th>\n      <th>titleType</th>\n      <th>primaryTitle</th>\n      <th>originalTitle</th>\n      <th>isAdult</th>\n      <th>startYear</th>\n      <th>endYear</th>\n      <th>runtimeMinutes</th>\n      <th>genres</th>\n      <th>directors</th>\n      <th>writers</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>tt0016906</td>\n      <td>movie</td>\n      <td>Frivolinas</td>\n      <td>Frivolinas</td>\n      <td>0</td>\n      <td>2014</td>\n      <td>\\N</td>\n      <td>80</td>\n      <td>Comedy</td>\n      <td>Arturo Carballo</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>tt0035423</td>\n      <td>movie</td>\n      <td>Kate &amp; Leopold</td>\n      <td>Kate &amp; Leopold</td>\n      <td>0</td>\n      <td>2001</td>\n      <td>\\N</td>\n      <td>118</td>\n      <td>Comedy</td>\n      <td>James Mangold</td>\n      <td>Steven Rogers</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>tt0064322</td>\n      <td>movie</td>\n      <td>The Woman with the Knife</td>\n      <td>La femme au couteau</td>\n      <td>0</td>\n      <td>2010</td>\n      <td>\\N</td>\n      <td>80</td>\n      <td>Drama</td>\n      <td>Bassori Timite</td>\n      <td>Bassori Timite</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>tt0069049</td>\n      <td>movie</td>\n      <td>The Other Side of the Wind</td>\n      <td>The Other Side of the Wind</td>\n      <td>0</td>\n      <td>2018</td>\n      <td>\\N</td>\n      <td>122</td>\n      <td>Drama</td>\n      <td>Orson Welles</td>\n      <td>Orson Welles</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>tt0069204</td>\n      <td>movie</td>\n      <td>Sabse Bada Sukh</td>\n      <td>Sabse Bada Sukh</td>\n      <td>0</td>\n      <td>2018</td>\n      <td>\\N</td>\n      <td>\\N</td>\n      <td>Comedy</td>\n      <td>Hrishikesh Mukherjee</td>\n      <td>Gulzar</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>227492</th>\n      <td>tt9916622</td>\n      <td>movie</td>\n      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n      <td>0</td>\n      <td>2015</td>\n      <td>\\N</td>\n      <td>57</td>\n      <td>Documentary</td>\n      <td>Ana Célia de Oliveira</td>\n      <td>Angela Gurgel</td>\n    </tr>\n    <tr>\n      <th>227493</th>\n      <td>tt9916680</td>\n      <td>movie</td>\n      <td>De la ilusión al desconcierto: cine colombiano...</td>\n      <td>De la ilusión al desconcierto: cine colombiano...</td>\n      <td>0</td>\n      <td>2007</td>\n      <td>\\N</td>\n      <td>100</td>\n      <td>Documentary</td>\n      <td>Luis Ospina</td>\n      <td>Luis Ospina</td>\n    </tr>\n    <tr>\n      <th>227494</th>\n      <td>tt9916706</td>\n      <td>movie</td>\n      <td>Dankyavar Danka</td>\n      <td>Dankyavar Danka</td>\n      <td>0</td>\n      <td>2013</td>\n      <td>\\N</td>\n      <td>\\N</td>\n      <td>Comedy</td>\n      <td>Kanchan Nayak</td>\n      <td>Sudhir Nikam</td>\n    </tr>\n    <tr>\n      <th>227495</th>\n      <td>tt9916730</td>\n      <td>movie</td>\n      <td>6 Gunn</td>\n      <td>6 Gunn</td>\n      <td>0</td>\n      <td>2017</td>\n      <td>\\N</td>\n      <td>116</td>\n      <td>\\N</td>\n      <td>Kiran Gawade</td>\n      <td>Kiran Gawade</td>\n    </tr>\n    <tr>\n      <th>227496</th>\n      <td>tt9916754</td>\n      <td>movie</td>\n      <td>Chico Albuquerque - Revelações</td>\n      <td>Chico Albuquerque - Revelações</td>\n      <td>0</td>\n      <td>2013</td>\n      <td>\\N</td>\n      <td>49</td>\n      <td>Documentary</td>\n      <td>Angela Gurgel</td>\n      <td>Vinicius Augusto Bozzo</td>\n    </tr>\n  </tbody>\n</table>\n<p>227497 rows × 11 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 100
+    }
+   ],
+   "source": [
+    "first_merge"
    ]
   },
   {
@@ -298,7 +395,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hello"
+   ]
   }
  ]
 }
