adding more features

--- a/final_project/Alpha/imdb_tools_test.ipynb
+++ b/final_project/Alpha/imdb_tools_test.ipynb
@@ -33,12 +33,7 @@
     "import csv\n",
     "import pandas as pd\n",
     "from imdb import IMDb\n",
-    "import re\n",
-    "\n",
-    "#NN ones\n",
-    "import tensorflow.keras as keras\n",
-    "import tensorflow as tf\n",
-    "from sklearn.model_selection import train_test_split"
+    "import re"
    ]
   },
   {
