--- a/final_project/Alpha/neural_network_tools_v2.ipynb
+++ b/final_project/Alpha/neural_network_tools_v2.ipynb
@@ -98,6 +98,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What's gucci!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As we can see, the number of ratings is skewed towards a lower amount of votes. These ratings with lower amount of votes might not be good for the analysis since most likely is not enough to be a good assesment of the ratings. I will make a cutoff at the 50th percentile in order to eliminate that problem."
    ]
   },
