--- a/final_project/Alpha/neural_network_tools_v2.ipynb
+++ b/final_project/Alpha/neural_network_tools_v2.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What's gucci! manucci!"
+    "What's gucci! manucci! besmucci!"
    ]
   },
   {
